syntax = "proto3";
option java_package = "models.proto.requests";
option java_generate_equals_and_hash = true;

message ConsumeRequest {
  string topic = 1;
  int64 offset = 2;
}

