syntax = "proto3";

import "Record.proto";
option java_package = "models.proto.responses";
option java_generate_equals_and_hash = true;

message ConsumeResponse {
  repeated Record data = 1;
}

